additional arxiv papers

--- a/publications.html
+++ b/publications.html
@@ -110,6 +110,58 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Kumar_Cross_arXiv_2024">
+			<img src="publications/data/24_arxiv5.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Cross Resolution Encoding-Decoding For Detection Transformers</h4>
+			<p class="text-muted">
+				Ashish Kumar and <b>Jaesik Park</b>.
+				<em>2410.04088 (arXiv), 2024</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2410.04088" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kumar_Cross_arXiv_2024_bibtex_button" aria-expanded="false" aria-controls="Kumar_Cross_arXiv_2024_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kumar_Cross_arXiv_2024_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kumar_Cross_arXiv_2024,<br>
+							Title={Cross Resolution Encoding-Decoding For Detection Transformers},<br>
+							Author={Ashish Kumar and Jaesik Park},<br>
+							Journal={2410.04088 (arXiv)},<br>
+							Year={2024}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Kumar_Designing_arXiv_2024">
+			<img src="publications/data/24_arxiv4.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Designing Concise ConvNets with Columnar Stages</h4>
+			<p class="text-muted">
+				Ashish Kumar and <b>Jaesik Park</b>.
+				<em>2410.04089 (arXiv), 2024</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2410.04089" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kumar_Designing_arXiv_2024_bibtex_button" aria-expanded="false" aria-controls="Kumar_Designing_arXiv_2024_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kumar_Designing_arXiv_2024_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kumar_Designing_arXiv_2024,<br>
+							Title={Designing Concise ConvNets with Columnar Stages},<br>
+							Author={Ashish Kumar and Jaesik Park},<br>
+							Journal={2410.04089 (arXiv)},<br>
+							Year={2024}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Lim_KISSMatcher_arXiv_2024">
 			<img src="publications/data/24_arxiv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>KISS-Matcher: Fast and Robust Point Cloud Registration Revisited</h4>
