ICLR paper acceptance

--- a/publications.html
+++ b/publications.html
@@ -67,25 +67,51 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
-		<div class="col-lg-4 text-center" id="Shin_Localityaware_arXiv_2025">
+		<div class="col-lg-4 text-center" id="Shin_Localityaware_ICLR_2025">
 			<img src="publications/data/25_arxiv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Locality-aware Gaussian Compression for Fast and High-quality Rendering</h4>
 			<p class="text-muted">
 				Seungjoo Shin, <b>Jaesik Park</b>, and Sunghyun Cho.
-				<em>2501.05757 (arXiv), 2025</em>
+				<em>Int. Conf. on Learning Representations (<b>ICLR</b>), 2025</em>
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2501.05757" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Localityaware_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Shin_Localityaware_arXiv_2025_bibtex_button">BibTeX</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Localityaware_ICLR_2025_bibtex_button" aria-expanded="false" aria-controls="Shin_Localityaware_ICLR_2025_bibtex_button">BibTeX</a>
 			</p>
-			<div class="collapse" id="Shin_Localityaware_arXiv_2025_bibtex_button">
+			<div class="collapse" id="Shin_Localityaware_ICLR_2025_bibtex_button">
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@article{Shin_Localityaware_arXiv_2025,<br>
+							@inproceedings{Shin_Localityaware_ICLR_2025,<br>
 							Title={Locality-aware Gaussian Compression for Fast and High-quality Rendering},<br>
 							Author={Seungjoo Shin and Jaesik Park and Sunghyun Cho},<br>
-							Journal={2501.05757 (arXiv)},<br>
+							Booktitle={Proceedings of the Int. Conf. on Learning Representations (ICLR)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Kumar_Designing_ICLR_2025">
+			<img src="publications/data/24_arxiv4.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Designing Concise ConvNets with Columnar Stages</h4>
+			<p class="text-muted">
+				Ashish Kumar and <b>Jaesik Park</b>.
+				<em>Int. Conf. on Learning Representations (<b>ICLR</b>), 2025</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2410.04089" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kumar_Designing_ICLR_2025_bibtex_button" aria-expanded="false" aria-controls="Kumar_Designing_ICLR_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kumar_Designing_ICLR_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Kumar_Designing_ICLR_2025,<br>
+							Title={Designing Concise ConvNets with Columnar Stages},<br>
+							Author={Ashish Kumar and Jaesik Park},<br>
+							Booktitle={Proceedings of the Int. Conf. on Learning Representations (ICLR)},<br>
 							Year={2025}<br>
 							}
 						</p>
@@ -129,32 +155,6 @@
 							Title={Cross Resolution Encoding-Decoding For Detection Transformers},<br>
 							Author={Ashish Kumar and Jaesik Park},<br>
 							Journal={2410.04088 (arXiv)},<br>
-							Year={2024}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Kumar_Designing_arXiv_2024">
-			<img src="publications/data/24_arxiv4.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Designing Concise ConvNets with Columnar Stages</h4>
-			<p class="text-muted">
-				Ashish Kumar and <b>Jaesik Park</b>.
-				<em>2410.04089 (arXiv), 2024</em>
-			</p>
-			<p>
-				<a href="https://arxiv.org/abs/2410.04089" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kumar_Designing_arXiv_2024_bibtex_button" aria-expanded="false" aria-controls="Kumar_Designing_arXiv_2024_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Kumar_Designing_arXiv_2024_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Kumar_Designing_arXiv_2024,<br>
-							Title={Designing Concise ConvNets with Columnar Stages},<br>
-							Author={Ashish Kumar and Jaesik Park},<br>
-							Journal={2410.04089 (arXiv)},<br>
 							Year={2024}<br>
 							}
 						</p>
