--- a/publications.html
+++ b/publications.html
@@ -199,6 +199,7 @@
 				<br>(*Joint first authors)
 			</p>
 			<p>
+				<a href="https://openreview.net/pdf?id=0mRfQOnkqk" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Ahn_BudgetAware_TMLR_2024_bibtex_button" aria-expanded="false" aria-controls="Ahn_BudgetAware_TMLR_2024_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Ahn_BudgetAware_TMLR_2024_bibtex_button">
