--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2025.01. Two papers (3D Gaussian compression & ConvNet design) are accepted to <b>ICLR 2025</b>.
+					2025.01. Two papers (3D Gaussian compression & ConvNet design in 2025) are accepted to <b>ICLR 2025</b>.
 				</li>
 				<li class="list-group-item">
 					2024.12. I will serve as a Area Chair for <b>ICCV 2025</b> and <b>ICML 2025</b>.
