--- a/data/news.html
+++ b/data/news.html
@@ -1,4 +1,4 @@
-2025.01. Two papers (3D Gaussian compression & ConvNet design) are accepted to <b>ICLR 2025</b>.
+2025.01. Two papers (3D Gaussian compression & ConvNet design in 2025) are accepted to <b>ICLR 2025</b>.
 2024.12. I will serve as a Area Chair for <b>ICCV 2025</b> and <b>ICML 2025</b>.
 2024.11. I will serve as an Action Editor for Transactions on Machine Learning Research (<b>TMLR</b>).
 2024.11. I will serve as a Lead Area Chair for <b>CVPR 2025</b>.
