--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,34 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Lim_KISSMatcher_ICRA_2025">
+			<img src="publications/data/24_arxiv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>KISS-Matcher: Fast and Robust Point Cloud Registration Revisited</h4>
+			<p class="text-muted">
+				Hyungtae Lim, Daebeom Kim, Gunhee Shin, Jingnan Shi, Ignacio Vizzo, Hyun Myung, <b>Jaesik Park</b>, and Luca Carlone.
+				<em>Int. Conf. on Robotics and Automation (<b>ICRA</b>), 2025</em>
+				<br><a class="github-button" href="https://github.com/MIT-SPARK/KISS-Matcher" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star MIT-SPARK/KISS-Matcher on GitHub">Star</a><a class="github-button" href="https://github.com/MIT-SPARK/KISS-Matcher/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork MIT-SPARK/KISS-Matcher on GitHub">Fork</a>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2409.15615" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/MIT-SPARK/KISS-Matcher" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lim_KISSMatcher_ICRA_2025_bibtex_button" aria-expanded="false" aria-controls="Lim_KISSMatcher_ICRA_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Lim_KISSMatcher_ICRA_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Lim_KISSMatcher_ICRA_2025,<br>
+							Title={KISS-Matcher: Fast and Robust Point Cloud Registration Revisited},<br>
+							Author={Hyungtae Lim and Daebeom Kim and Gunhee Shin and Jingnan Shi and Ignacio Vizzo and Hyun Myung and Jaesik Park and Luca Carlone},<br>
+							Booktitle={Proceedings of the Int. Conf. on Robotics and Automation (ICRA)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Shin_Localityaware_ICLR_2025">
 			<img src="publications/data/25_arxiv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Locality-aware Gaussian Compression for Fast and High-quality Rendering</h4>
@@ -155,34 +183,6 @@
 							Title={Cross Resolution Encoding-Decoding For Detection Transformers},<br>
 							Author={Ashish Kumar and Jaesik Park},<br>
 							Journal={2410.04088 (arXiv)},<br>
-							Year={2024}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Lim_KISSMatcher_arXiv_2024">
-			<img src="publications/data/24_arxiv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>KISS-Matcher: Fast and Robust Point Cloud Registration Revisited</h4>
-			<p class="text-muted">
-				Hyungtae Lim, Daebeom Kim, Gunhee Shin, Jingnan Shi, Ignacio Vizzo, Hyun Myung, <b>Jaesik Park</b>, and Luca Carlone.
-				<em>2409.15615 (arXiv), 2024</em>
-				<br><a class="github-button" href="https://github.com/MIT-SPARK/KISS-Matcher" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star MIT-SPARK/KISS-Matcher on GitHub">Star</a><a class="github-button" href="https://github.com/MIT-SPARK/KISS-Matcher/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork MIT-SPARK/KISS-Matcher on GitHub">Fork</a>
-			</p>
-			<p>
-				<a href="https://arxiv.org/abs/2409.15615" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a href="https://github.com/MIT-SPARK/KISS-Matcher" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lim_KISSMatcher_arXiv_2024_bibtex_button" aria-expanded="false" aria-controls="Lim_KISSMatcher_arXiv_2024_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Lim_KISSMatcher_arXiv_2024_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Lim_KISSMatcher_arXiv_2024,<br>
-							Title={KISS-Matcher: Fast and Robust Point Cloud Registration Revisited},<br>
-							Author={Hyungtae Lim and Daebeom Kim and Gunhee Shin and Jingnan Shi and Ignacio Vizzo and Hyun Myung and Jaesik Park and Luca Carlone},<br>
-							Journal={2409.15615 (arXiv)},<br>
 							Year={2024}<br>
 							}
 						</p>
