--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2025.02. A paper about point cloud registration is accepted to <b>ICRA 2025</b>.
+				</li>
+				<li class="list-group-item">
 					2025.01. Two papers (3D Gaussian compression & ConvNet design in 2025) are accepted to <b>ICLR 2025</b>.
 				</li>
 				<li class="list-group-item">
@@ -88,15 +91,15 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 				<li class="list-group-item">
 					2024.09. A paper about brick assembly is accepted to Transactions on Machine Learning Research (<b>TMLR</b>).
 				</li>
-				<li class="list-group-item">
-					2024.09. A paper about fast drag-based image editing approach is accepted to <b>SIGGRAPH Asia 2024</b>.
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2024.09. A paper about fast drag-based image editing approach is accepted to <b>SIGGRAPH Asia 2024</b>.
+					</li>
 					<li class="list-group-item">
 						2024.06. Two papers got accepted to <b>ECCV 2024</b>.
 					</li>
