CVPR papers acceptance & CV update

--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,81 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Kim_VirtualPCR_CVPR_2025">
+			<img src="publications/data/25_cvpr1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>VirtualPCR: Compositional TV Show Reconstruction</h4>
+			<p class="text-muted">
+				Sangmin Kim, Seunguk Do, and <b>Jaesik Park</b>.
+				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_VirtualPCR_CVPR_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_VirtualPCR_CVPR_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_VirtualPCR_CVPR_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Kim_VirtualPCR_CVPR_2025,<br>
+							Title={VirtualPCR: Compositional TV Show Reconstruction},<br>
+							Author={Sangmin Kim and Seunguk Do and Jaesik Park},<br>
+							Booktitle={Proceedings of the Int. Conf. on Computer Vision and Pattern Recognition (CVPR)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Lee_LiveStroke_CVPR_2025">
+			<img src="publications/data/25_cvpr2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>LiveStroke: Abstracting 3D Motion from Videos</h4>
+			<p class="text-muted">
+				Jaeah Lee, Changwoon Choi, Young Min Kim, and <b>Jaesik Park</b>.
+				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_LiveStroke_CVPR_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_LiveStroke_CVPR_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Lee_LiveStroke_CVPR_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Lee_LiveStroke_CVPR_2025,<br>
+							Title={LiveStroke: Abstracting 3D Motion from Videos},<br>
+							Author={Jaeah Lee and Changwoon Choi and Young Min Kim and Jaesik Park},<br>
+							Booktitle={Proceedings of the Int. Conf. on Computer Vision and Pattern Recognition (CVPR)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Kim_Improving_CVPR_2025">
+			<img src="publications/data/25_cvpr3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Improving Editability in Image Generation with Layer-wise Memory</h4>
+			<p class="text-muted">
+				Daneul Kim, Jaeah Lee, and <b>Jaesik Park</b>.
+				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Improving_CVPR_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_Improving_CVPR_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_Improving_CVPR_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Kim_Improving_CVPR_2025,<br>
+							Title={Improving Editability in Image Generation with Layer-wise Memory},<br>
+							Author={Daneul Kim and Jaeah Lee and Jaesik Park},<br>
+							Booktitle={Proceedings of the Int. Conf. on Computer Vision and Pattern Recognition (CVPR)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Lim_KISSMatcher_ICRA_2025">
 			<img src="publications/data/24_arxiv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>KISS-Matcher: Fast and Robust Point Cloud Registration Revisited</h4>
