--- a/lab.html
+++ b/lab.html
@@ -125,6 +125,7 @@
 			<h5>Sang Min Kim</h5>
 			2024 Spring<br>
 			Integrated Ph.D. student<br>
+			<a href="https://nstar1125.github.io" target="_blank">Homepage</a>
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/jaeah.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
