change name - ShowMak3r

--- a/publications.html
+++ b/publications.html
@@ -67,22 +67,22 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
-		<div class="col-lg-4 text-center" id="Kim_VirtualPCR_CVPR_2025">
+		<div class="col-lg-4 text-center" id="Kim_ShowMak3r_CVPR_2025">
 			<img src="publications/data/25_cvpr1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>VirtualPCR: Compositional TV Show Reconstruction</h4>
+			<h4>ShowMak3r: Compositional TV Show Reconstruction</h4>
 			<p class="text-muted">
 				Sangmin Kim, Seunguk Do, and <b>Jaesik Park</b>.
 				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025</em>
 			</p>
 			<p>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_VirtualPCR_CVPR_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_VirtualPCR_CVPR_2025_bibtex_button">BibTeX</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_ShowMak3r_CVPR_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_ShowMak3r_CVPR_2025_bibtex_button">BibTeX</a>
 			</p>
-			<div class="collapse" id="Kim_VirtualPCR_CVPR_2025_bibtex_button">
+			<div class="collapse" id="Kim_ShowMak3r_CVPR_2025_bibtex_button">
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@inproceedings{Kim_VirtualPCR_CVPR_2025,<br>
-							Title={VirtualPCR: Compositional TV Show Reconstruction},<br>
+							@inproceedings{Kim_ShowMak3r_CVPR_2025,<br>
+							Title={ShowMak3r: Compositional TV Show Reconstruction},<br>
 							Author={Sangmin Kim and Seunguk Do and Jaesik Park},<br>
 							Booktitle={Proceedings of the Int. Conf. on Computer Vision and Pattern Recognition (CVPR)},<br>
 							Year={2025}<br>
