--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,32 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Seo_BUFFERX_arXiv_2025">
+			<img src="publications/data/25_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">BUFFER-X: Towards Zero-Shot Point Cloud Registration in Diverse Scenes</h4>
+			<p class="text-muted">
+				Minkyun Seo*, Hyungtae Lim*, Kanghee Lee, Luca Carlone, and <b>Jaesik Park</b>.
+				<em>2503.07940 (arXiv), 2025</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2503.07940" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Seo_BUFFERX_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Seo_BUFFERX_arXiv_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Seo_BUFFERX_arXiv_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Seo_BUFFERX_arXiv_2025,<br>
+							Title={BUFFER-X: Towards Zero-Shot Point Cloud Registration in Diverse Scenes},<br>
+							Author={Minkyun Seo and Hyungtae Lim and Kanghee Lee and Luca Carlone and Jaesik Park},<br>
+							Journal={2503.07940 (arXiv)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Kim_ShowMak3r_CVPR_2025">
 			<img src="publications/data/25_cvpr1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>ShowMak3r: Compositional TV Show Reconstruction</h4>
