--- a/lab.html
+++ b/lab.html
@@ -79,7 +79,8 @@
 			<img src="source/members/cheolhong.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Cheolhong Min</h5>
 			2024 Fall<br>
-			Ph.D. student
+			Ph.D. student<br>
+			<a href="https://cheolhong0916.github.io" target="_blank">Homepage</a>
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/pierre.jpg" class="rounded-circle img-thumbnail shadow mb-2">
