--- a/publications.html
+++ b/publications.html
@@ -118,22 +118,22 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-4 text-center" id="Lee_LiveStroke_CVPR_2025">
+		<div class="col-lg-4 text-center" id="Lee_Recovering_CVPR_2025">
 			<img src="publications/data/25_cvpr2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>LiveStroke: Abstracting 3D Motion from Videos</h4>
+			<h4>Recovering Dynamic 3D Sketches from Videos</h4>
 			<p class="text-muted">
 				Jaeah Lee, Changwoon Choi, Young Min Kim, and <b>Jaesik Park</b>.
 				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025</em>
 			</p>
 			<p>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_LiveStroke_CVPR_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_LiveStroke_CVPR_2025_bibtex_button">BibTeX</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_Recovering_CVPR_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_Recovering_CVPR_2025_bibtex_button">BibTeX</a>
 			</p>
-			<div class="collapse" id="Lee_LiveStroke_CVPR_2025_bibtex_button">
+			<div class="collapse" id="Lee_Recovering_CVPR_2025_bibtex_button">
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@inproceedings{Lee_LiveStroke_CVPR_2025,<br>
-							Title={LiveStroke: Abstracting 3D Motion from Videos},<br>
+							@inproceedings{Lee_Recovering_CVPR_2025,<br>
+							Title={Recovering Dynamic 3D Sketches from Videos},<br>
 							Author={Jaeah Lee and Changwoon Choi and Young Min Kim and Jaesik Park},<br>
 							Booktitle={Proceedings of the Int. Conf. on Computer Vision and Pattern Recognition (CVPR)},<br>
 							Year={2025}<br>
