--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,7 @@
 			<p class="text-muted">
 				Minkyun Seo*, Hyungtae Lim*, Kanghee Lee, Luca Carlone, and <b>Jaesik Park</b>.
 				<em>2503.07940 (arXiv), 2025</em>
+				<br>(*Joint first authors)
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2503.07940" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
