--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2025.02. Three papers about dynamic scene reconstrucion and image editing are accepted to <b>CVPR 2025</b>.
+					2025.02. Three papers about dynamic scene reconstruction and image editing are accepted to <b>CVPR 2025</b>.
 				</li>
 				<li class="list-group-item">
 					2025.02. A paper about point cloud registration is accepted to <b>ICRA 2025</b>.
