--- a/publications.html
+++ b/publications.html
@@ -102,6 +102,7 @@
 				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025</em>
 			</p>
 			<p>
+				<a href="https://nstar1125.github.io/showmak3r" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_ShowMak3r_CVPR_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_ShowMak3r_CVPR_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_ShowMak3r_CVPR_2025_bibtex_button">
