--- a/publications.html
+++ b/publications.html
@@ -128,6 +128,8 @@
 				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025</em>
 			</p>
 			<p>
+				<a href="https://jaeah.me/liv3stroke_web" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2503.20321" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_Recovering_CVPR_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_Recovering_CVPR_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Lee_Recovering_CVPR_2025_bibtex_button">
