--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,33 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Jung_Targetless_arXiv_2025">
+			<img src="publications/data/25_arxiv4.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Targetless LiDAR-Camera Calibration with Anchored 3D Gaussians</h4>
+			<p class="text-muted">
+				Haebeom Jung, Namtae Kim, Jungwoo Kim, and <b>Jaesik Park</b>.
+				<em>XXXX.XXXXX (arXiv), 2025</em>
+			</p>
+			<p>
+				<a href="https://zang09.github.io/tlc-calib-site" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="#" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jung_Targetless_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Jung_Targetless_arXiv_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Jung_Targetless_arXiv_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Jung_Targetless_arXiv_2025,<br>
+							Title={Targetless LiDAR-Camera Calibration with Anchored 3D Gaussians},<br>
+							Author={Haebeom Jung and Namtae Kim and Jungwoo Kim and Jaesik Park},<br>
+							Journal={XXXX.XXXXX (arXiv)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Seo_BUFFERX_arXiv_2025">
 			<img src="publications/data/25_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">BUFFER-X: Towards Zero-Shot Point Cloud Registration in Diverse Scenes</h4>
