--- a/publications.html
+++ b/publications.html
@@ -235,6 +235,7 @@
 				<em>Int. Conf. on Learning Representations (<b>ICLR</b>), 2025</em>
 			</p>
 			<p>
+				<a href="https://seungjooshin.github.io/LocoGS" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://arxiv.org/abs/2501.05757" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Localityaware_ICLR_2025_bibtex_button" aria-expanded="false" aria-controls="Shin_Localityaware_ICLR_2025_bibtex_button">BibTeX</a>
 			</p>
