lidar calib arxiv paper

--- a/publications.html
+++ b/publications.html
@@ -72,11 +72,11 @@
 			<h4>Targetless LiDAR-Camera Calibration with Anchored 3D Gaussians</h4>
 			<p class="text-muted">
 				Haebeom Jung, Namtae Kim, Jungwoo Kim, and <b>Jaesik Park</b>.
-				<em>XXXX.XXXXX (arXiv), 2025</em>
+				<em>2504.04597 (arXiv), 2025</em>
 			</p>
 			<p>
 				<a href="https://zang09.github.io/tlc-calib-site" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-				<a href="#" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://arxiv.org/abs/2504.04597" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jung_Targetless_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Jung_Targetless_arXiv_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Jung_Targetless_arXiv_2025_bibtex_button">
@@ -86,7 +86,7 @@
 							@article{Jung_Targetless_arXiv_2025,<br>
 							Title={Targetless LiDAR-Camera Calibration with Anchored 3D Gaussians},<br>
 							Author={Haebeom Jung and Namtae Kim and Jungwoo Kim and Jaesik Park},<br>
-							Journal={XXXX.XXXXX (arXiv)},<br>
+							Journal={2504.04597 (arXiv)},<br>
 							Year={2025}<br>
 							}
 						</p>
