--- a/lab.html
+++ b/lab.html
@@ -44,12 +44,39 @@
 
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
-		<div class="col-md-12 text-center">
+		<!-- <div class="col-md-12 text-center">
 			<img src="source/lab_pics/2023_10_27.jpeg" class="img-thumbnail shadow mb-2">
+		</div> -->
+
+		<div class="col-md-12 text-center">
+			<div id="carouselcontrols" class="carousel slide" data-ride="carousel">
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img class="d-block w-100 img-thumbnail" src="source/lab_pics/2025_04_11.jpg" alt="First slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100 img-thumbnail" src="source/lab_pics/2024_08_13.jpg" alt="Second slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100 img-thumbnail" src="source/lab_pics/2023_10_27.jpg" alt="Third slide">
+					</div>
+				</div>
+				<a class="carousel-control-prev" href="#carouselcontrols" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselcontrols" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
 			<ul class="list-group shadow-sm">
 				<a href="https://drive.google.com/drive/folders/1ADUN4ywBjI5XtR3uLKMdlJ1Gy0lseukw?usp=sharing" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  lab_introduction.pdf</a>
 			</ul>
 		</div>
+
+		
+
 		<h3>Members</h3>
 		<div class="col-md-3 text-center">
 			<img src="source/members/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-2">
@@ -235,7 +262,7 @@
 			2019F - 2021F<br>
 			MS degree (POSTECH)<br>
 			Playtag
-		</div>		
+		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/hyunmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Hyunmin Lee</h5>
