--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -1,31 +1,66 @@
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<div class="col-md-12 text-center">
-			<div id="carouselcontrols" class="carousel slide" data-ride="carousel">
+			<!-- gallery -->
+			<div id="gallery_control" class="carousel slide" data-bs-ride="false">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#gallery_control" data-bs-slide-to="0" class="active" aria-current="true"></button>
+					<button type="button" data-bs-target="#gallery_control" data-bs-slide-to="1"></button>
+					<button type="button" data-bs-target="#gallery_control" data-bs-slide-to="2"></button>
+					<button type="button" data-bs-target="#gallery_control" data-bs-slide-to="3"></button>
+					<button type="button" data-bs-target="#gallery_control" data-bs-slide-to="4"></button>
+				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img class="d-block w-100 img-thumbnail" src="source/lab_pics/2025_04_11.jpg" alt="First slide">
+						<img src="source\lab_pics\2025_04_11.jpg" class="d-block w-100 img-thumbnail">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>2025.04.11</h5>
+							<p>Seoul National University in spring, covered with cherry blossoms and forsythias.</p>
+						</div>
 					</div>
 					<div class="carousel-item">
-						<img class="d-block w-100 img-thumbnail" src="source/lab_pics/2024_08_13.jpg" alt="Second slide">
+						<img src="source\lab_pics\2024_08_13.jpg" class="d-block w-100 img-thumbnail">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>2024.08.13</h5>
+							<p>Attending the KCCV conference during a splendid summer in beautiful Busan.</p>
+						</div>
 					</div>
 					<div class="carousel-item">
-						<img class="d-block w-100 img-thumbnail" src="source/lab_pics/2023_10_27.jpg" alt="Third slide">
+						<img src="source\lab_pics\2023_10_27.jpg" class="d-block w-100 img-thumbnail">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>2023.10.27</h5>
+							<p>Seoul National University embraced by autumn foliage.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img src="source\lab_pics\2023_07_19.jpg" class="d-block w-100 img-thumbnail">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>2023.07.19</h5>
+							<p>A delightful tea time and lab leader student election in Pohang.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img src="source\lab_pics\2023_06_19.jpg" class="d-block w-100 img-thumbnail">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>2023.06.19</h5>
+							<p>Attending CVPR 2023 conference in Vancouver.</p>
+						</div>
 					</div>
 				</div>
-				<a class="carousel-control-prev" href="#carouselcontrols" role="button" data-slide="prev">
+				<button class="carousel-control-prev" type="button" data-bs-target="#gallery_control" data-bs-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselcontrols" role="button" data-slide="next">
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#gallery_control" data-bs-slide="next">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
+					<span class="visually-hidden">Next</span>
+				</button>
 			</div>
-			<ul class="list-group shadow-sm">
+			<ul class="list-group shadow-none">
 				<a href="https://drive.google.com/drive/folders/1ADUN4ywBjI5XtR3uLKMdlJ1Gy0lseukw?usp=sharing" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  lab_introduction.pdf</a>
 			</ul>
 		</div>
+		<!-- members -->
 		<h3>Members</h3>
 		<div class="col-md-3 text-center">
 			<img src="source/members/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-2">
