--- a/lab.html
+++ b/lab.html
@@ -281,6 +281,7 @@
 			<h5><a href="https://www.linkedin.com/in/jaebong-jeong-66265015b" target="_blank">Jaebong Jeong</a></h5>
 			2019 Fall - 2021 Fall<br>
 			MS degree (POSTECH)<br>
+			Playtag<br>
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/hyunmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
