hide students photo when the window size is small

--- a/lab.html
+++ b/lab.html
@@ -106,104 +106,104 @@
 		</div>
 		<h3>Members</h3>
 		<div class="col-md-3 text-center">
-			<img src="source/members/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://scholar.google.com/citations?user=ZqM8_24AAAAJ" target="_blank">Kwonyoung Ryu</a></h5>
 			2021 Spring - current<br>
 			Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/ganghee.jpeg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/ganghee.jpeg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://scholar.google.com/citations?user=s-haNkwAAAAJ" target="_blank">Kanghee Lee</a></h5>
 			2023 Fall - current<br>
 			Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/seunguk.jpg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/seunguk.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://www.linkedin.com/in/seunguk-do-9b42251a9" target="_blank">Seunguk Do</a></h5>
 			2023 Fall - current<br>
 			Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/injae.jpg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/injae.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://scholar.google.com/citations?user=Nc1XmU8AAAAJ" target="_blank">In-Jae Lee</a></h5>
 			2024 Fall - current<br>
 			Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/cheolhong.jpeg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/cheolhong.jpeg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://cheolhong0916.github.io/" target="_blank">Cheolhong Min</a></h5>
 			2024 Fall - current<br>
 			Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/pierre.jpg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/pierre.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://www.linkedin.com/in/pierre-musacchio-605092217" target="_blank">Pierre E. Musacchio</a></h5>
 			2023 Fall - current<br>
 			Integrated Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/joonghyuk.jpg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/joonghyuk.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://joonghyuk.com/" target="_blank">Joonghyuk Shin</a></h5>
 			2023 Fall - current<br>
 			Integrated Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/jinmo.jpg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/jinmo.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://jinmo.kim/" target="_blank">Jinmo Kim</a></h5>
 			2023 Fall - current<br>
 			Integrated Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/haebeom.jpg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/haebeom.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://github.com/zang09" target="_blank">Haebeom Jung</a></h5>
 			2023 Fall - current<br>
 			Integrated Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/daneul.jpeg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/daneul.jpeg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://carpedkm.github.io/" target="_blank">Daneul Kim</a></h5>
 			2023 Fall - current<br>
 			Master's student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/hyunjoon.jpg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/hyunjoon.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://github.com/JJoonII" target="_blank">HyunJoon Lee</a></h5>
 			2024 Spring - current<br>
 			Integrated Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/sangmin.jpg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/sangmin.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://nstar1125.github.io/" target="_blank">Sangmin Kim</a></h5>
 			2024 Spring - current<br>
 			Integrated Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/jaeah.jpeg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/jaeah.jpeg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://jaeah.me/" target="_blank">Jaeah Lee</a></h5>
 			2024 Spring - current<br>
 			Master's student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/namtae.jpg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/namtae.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5>Namtae Kim</h5>
 			2024 Fall - current<br>
 			Integrated Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/milo.jpg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/milo.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://github.com/MiloDeroussi" target="_blank">Milo Deroussi</a></h5>
 			2024 Fall - current<br>
 			Exchange master's student<br>
 			Télécom SudParis<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/youngjoong.jpg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/youngjoong.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://revsic.github.io/" target="_blank">YoungJoong Kim</a></h5>
 			2025 Spring - current<br>
 			Master's student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/daeun.jpeg" class="rounded-circle img-thumbnail shadow mb-3">
+			<img src="source/members/daeun.jpeg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5>Daeun Lee</h5>
 			2025 Spring - current<br>
 			Master's student<br>
@@ -214,27 +214,27 @@
 	<div class="row gx-4 gy-4">
 		<h3>Past members</h3>
 		<div class="col-md-2 text-center">
-			<img src="source/members/dongmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/dongmin.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://www.linkedin.com/in/you-dongmin-28297012b" target="_blank">Dongmin You</a></h5>
 			2022 Spring - 2023 Fall<br>
 			MS degree (POSTECH)<br>
 			GenGenAI<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/jaesung.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/jaesung.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://jaesung-choe.github.io/" target="_blank">Jaesung Choe</a></h5>
 			2023 Summer<br>
 			Post Doc. Researcher<br>
 			NVIDIA<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/seoyeon.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/seoyeon.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://yeon07.github.io/" target="_blank">Seoyeon Kim</a></h5>
 			2022 Fall - 2024 Spring<br>
 			MS degree (POSTECH)<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://seungjooshin.github.io" target="_blank">Seungjoo Shin</a></h5>
 			2021 Fall - 2023 Spring<br>
 			MS degree (POSTECH)<br>
@@ -242,28 +242,28 @@
 			Ph.D. student (POSTECH)<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://www.linkedin.com/in/jk3472" target="_blank">Jiye Kim</a></h5>
 			2021 Spring - 2022 Fall<br>
 			MS degree (POSTECH)<br>
 			LG AI Research<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://jinoh-cho.github.io/" target="_blank">Jinoh Cho</a></h5>
 			2020 Fall - 2022 Fall<br>
 			MS degree (POSTECH)<br>
 			Pursuing Ph.D.<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/seokjun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/seokjun.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://www.linkedin.com/in/seokjoon-ahn-36414b118" target="_blank">Seokjun Ahn</a></h5>
 			2020 Fall - 2022 Fall<br>
 			MS degree (POSTECH)<br>
 			Qualcomm Korea<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/chunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/chunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://chrockey.github.io/" target="_blank">Chunghyun Park</a></h5>
 			2020 Spring - 2021 Fall<br>
 			MS degree (POSTECH)<br>
@@ -271,27 +271,27 @@
 			Ph.D. student (POSTECH)<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/minguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/minguk.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://mingukkang.github.io/" target="_blank">Minguk Kang</a></h5>
 			2020 Spring - current<br>
 			Integrated Ph.D. student<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/jaebong.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/jaebong.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://www.linkedin.com/in/jaebong-jeong-66265015b" target="_blank">Jaebong Jeong</a></h5>
 			2019 Fall - 2021 Fall<br>
 			MS degree (POSTECH)<br>
 			Playtag<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/hyunmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/hyunmin.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://scholar.google.com/citations?user=aKVfs4QAAAAJ&hl=ko" target="_blank">Hyunmin Lee</a></h5>
 			2019 Fall - 2021 Spring<br>
 			MS degree (POSTECH)<br>
 			LG AI Research<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/junha.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/junha.jpeg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://junha-l.github.io/" target="_blank">Junha Lee</a></h5>
 			2019 Fall - 2021 Spring<br>
 			MS degree (POSTECH)<br>
