--- a/publications.html
+++ b/publications.html
@@ -72,10 +72,11 @@
 			<h4 class="em-tight">Subject-driven Video Generation via Disentangled Identity and Motion</h4>
 			<p class="text-muted">
 				Daneul Kim, Jingxu Zhang, Wonjoon Jin, Sunghyun Cho, Qi Dai, <b>Jaesik Park</b>, and Chong Luo.
-				<em>XXXX.XXXX (arXiv), 2025</em>
+				<em>2504.17816 (arXiv), 2025</em>
 			</p>
 			<p>
 				<a href="https://carpedkm.github.io/projects/disentangled_sub" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2504.17816" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Subjectdriven_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_Subjectdriven_arXiv_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_Subjectdriven_arXiv_2025_bibtex_button">
@@ -85,7 +86,7 @@
 							@article{Kim_Subjectdriven_arXiv_2025,<br>
 							Title={Subject-driven Video Generation via Disentangled Identity and Motion},<br>
 							Author={Daneul Kim and Jingxu Zhang and Wonjoon Jin and Sunghyun Cho and Qi Dai and Jaesik Park and Chong Luo},<br>
-							Journal={XXXX.XXXX (arXiv)},<br>
+							Journal={2504.17816 (arXiv)},<br>
 							Year={2025}<br>
 							}
 						</p>
