--- a/lab.html
+++ b/lab.html
@@ -208,6 +208,12 @@
 			2025 Spring - current<br>
 			Master's student<br>
 		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/minkyun.jpeg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
+			<h5>Minkyun Seo</h5>
+			2025 Fall - current<br>
+			Integrated Ph.D. student<br>
+		</div>
 	</div>
 </div>
 <div class="container mt-4">
