--- a/publications.html
+++ b/publications.html
@@ -210,6 +210,7 @@
 			</p>
 			<p>
 				<a href="https://carpedkm.github.io/projects/improving_edit/index.html" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2505.01079" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Improving_CVPR_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_Improving_CVPR_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_Improving_CVPR_2025_bibtex_button">
